--- a/index.html
+++ b/index.html
@@ -17,149 +17,161 @@
 
 <body>
     <header class="header">
-        <nav class="header__nav">
-            <a href="./index.html" class="logo">Web <span class="accent-dark">Studio</span></a>
+        <div class="container">
+            <nav class="header__nav">
+                <a href="./index.html" class="logo">Web <span class="accent-dark">Studio</span></a>
 
-            <ul class="nav-list">
-                <li class="nav-list__item">
-                    <a class="nav-list__link" href="./index.html">Studio</a>
-                </li>
-                <li class="nav-list__item">
-                    <a class="nav-list__link" href="">Portfolio</a>
-                </li>
-                <li class="nav-list__item">
-                    <a class="nav-list__link" href="">Contacts</a>
-                </li>
-            </ul>
-        </nav>
+                <ul class="nav-list">
+                    <li class="nav-list__item">
+                        <a class="nav-list__link" href="./index.html">Studio</a>
+                    </li>
+                    <li class="nav-list__item">
+                        <a class="nav-list__link" href="">Portfolio</a>
+                    </li>
+                    <li class="nav-list__item">
+                        <a class="nav-list__link" href="">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
 
-        <address class="header__contacts">
-            <ul class="contacts-list">
-                <li class="contacts-list__item">
-                    <a class="contacts-list__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="contacts-list__item">
-                    <a class="contacts-list__link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
+            <address class="header__contacts">
+                <ul class="contacts-list">
+                    <li class="contacts-list__item">
+                        <a class="contacts-list__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="contacts-list__item">
+                        <a class="contacts-list__link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </header>
 
     <main>
         <section class="intro">
-            <h1 class="intro__title">Effective Solutions for Your Business</h1>
-            <button class="intro__button" type="button">Order Service</button>
+            <div class="container">
+                <h1 class="intro__title">Effective Solutions for Your Business</h1>
+                <button class="intro__button" type="button">Order Service</button>
+            </div>
         </section>
 
         <section class="features">
-            <h2 class="features__title">Features</h2>
-            <ul class="features__list">
-                <li class="features-item">
-                    <h3 class="features-item__title">Strategy</h3>
-                    <p class="features-item__text">
-                        Our goal is to identify the business problem to walk away with
-                        the perfect and creative solution.
-                    </p>
-                </li>
-                <li class="features-item">
-                    <h3 class="features-item__title">Punctuality</h3>
-                    <p class="features-item__text">
-                        Bring the key message to the brand's audience for the best price
-                        within the shortest possible time.
-                    </p>
-                </li>
-                <li class="features-item">
-                    <h3 class="features-item__title">Diligence</h3>
-                    <p class="features-item__text">
-                        Research and confirm brands that present the strongest digital
-                        growth opportunities and minimize risk.
-                    </p>
-                </li>
-                <li class="features-item">
-                    <h3 class="features-item__title">Technologies</h3>
-                    <p class="features-item__text">
-                        Design practice focused on digital experiences. We bring forth a
-                        deep passion for problem-solving.
-                    </p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="features__title">Features</h2>
+                <ul class="features__list">
+                    <li class="features-item">
+                        <h3 class="features-item__title">Strategy</h3>
+                        <p class="features-item__text">
+                            Our goal is to identify the business problem to walk away with
+                            the perfect and creative solution.
+                        </p>
+                    </li>
+                    <li class="features-item">
+                        <h3 class="features-item__title">Punctuality</h3>
+                        <p class="features-item__text">
+                            Bring the key message to the brand's audience for the best price
+                            within the shortest possible time.
+                        </p>
+                    </li>
+                    <li class="features-item">
+                        <h3 class="features-item__title">Diligence</h3>
+                        <p class="features-item__text">
+                            Research and confirm brands that present the strongest digital
+                            growth opportunities and minimize risk.
+                        </p>
+                    </li>
+                    <li class="features-item">
+                        <h3 class="features-item__title">Technologies</h3>
+                        <p class="features-item__text">
+                            Design practice focused on digital experiences. We bring forth a
+                            deep passion for problem-solving.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <section class="team">
-            <h2 class="team__title">Our Team</h2>
-            <ul class="team__list">
-                <li class="team-member">
-                    <img class="team-member__photo" src="./images/team/member-1.jpg" alt="Mark Guerrero" width="264" />
-                    <h3 class="team-member__name">Mark Guerrero</h3>
-                    <p class="team-member__profession">Product Designer</p>
-                </li>
-                <li class="team-member">
-                    <img class="team-member__photo" src="./images/team/member-2.jpg" alt="Tom Ford" width="264" />
-                    <h3 class="team-member__name">Tom Ford</h3>
-                    <p class="team-member__profession">Frontend Developer</p>
-                </li>
-                <li class="team-member">
-                    <img class="team-member__photo" src="./images/team/member-3.jpg" alt="Camila Garcia" width="264" />
-                    <h3 class="team-member__name">Camila Garcia</h3>
-                    <p class="team-member__profession">Marketing</p>
-                </li>
-                <li class="team-member">
-                    <img class="team-member__photo" src="./images/team/member-4.jpg" alt="Daniel Wilson" width="264" />
-                    <h3 class="team-member__name">Daniel Wilson</h3>
-                    <p class="team-member__profession">UI Designer</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="team__title">Our Team</h2>
+                <ul class="team__list">
+                    <li class="team-member">
+                        <img class="team-member__photo" src="./images/team/member-1.jpg" alt="Mark Guerrero" width="264" />
+                        <h3 class="team-member__name">Mark Guerrero</h3>
+                        <p class="team-member__profession">Product Designer</p>
+                    </li>
+                    <li class="team-member">
+                        <img class="team-member__photo" src="./images/team/member-2.jpg" alt="Tom Ford" width="264" />
+                        <h3 class="team-member__name">Tom Ford</h3>
+                        <p class="team-member__profession">Frontend Developer</p>
+                    </li>
+                    <li class="team-member">
+                        <img class="team-member__photo" src="./images/team/member-3.jpg" alt="Camila Garcia" width="264" />
+                        <h3 class="team-member__name">Camila Garcia</h3>
+                        <p class="team-member__profession">Marketing</p>
+                    </li>
+                    <li class="team-member">
+                        <img class="team-member__photo" src="./images/team/member-4.jpg" alt="Daniel Wilson" width="264" />
+                        <h3 class="team-member__name">Daniel Wilson</h3>
+                        <p class="team-member__profession">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <section class="portfolio">
-            <h2 class="portfolio__title">Our Portfolio</h2>
-            <ul class="portfolio__list">
-                <li class="portfolio-item">
-                    <img class="portfolio-item__photo" src="./images/portfolio/case-1.jpg" alt="Banking App"
-                        width="360" />
-                    <h3 class="portfolio-item__title">Banking App</h3>
-                    <p class="portfolio-item__text">App</p>
-                </li>
-                <li class="portfolio-item">
-                    <img class="portfolio-item__photo" src="./images/portfolio/case-2.jpg" alt="Cashless Payment"
-                        width="360" />
-                    <h3 class="portfolio-item__title">Cashless Payment</h3>
-                    <p class="portfolio-item__text">Marketing</p>
-                </li>
-                <li class="portfolio-item">
-                    <img class="portfolio-item__photo" src="./images/portfolio/case-3.jpg" alt="Meditation App"
-                        width="360" />
-                    <h3 class="portfolio-item__title">Meditation App</h3>
-                    <p class="portfolio-item__text">App</p>
-                </li>
-                <li class="portfolio-item">
-                    <img class="portfolio-item__photo" src="./images/portfolio/case-4.jpg" alt="Taxi Service"
-                        width="360" />
-                    <h3 class="portfolio-item__title">Taxi Service</h3>
-                    <p class="portfolio-item__text">Marketing</p>
-                </li>
-                <li class="portfolio-item">
-                    <img class="portfolio-item__photo" src="./images/portfolio/case-5.jpg" alt="Screen Illustrations"
-                        width="360" />
-                    <h3 class="portfolio-item__title">Screen Illustrations</h3>
-                    <p class="portfolio-item__text">Design</p>
-                </li>
-                <li class="portfolio-item">
-                    <img class="portfolio-item__photo" src="./images/portfolio/case-6.jpg" alt="Online Courses"
-                        width="360" />
-                    <h3 class="portfolio-item__title">Online Courses</h3>
-                    <p class="portfolio-item__text">Marketing</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="portfolio__title">Our Portfolio</h2>
+                <ul class="portfolio__list">
+                    <li class="portfolio-item">
+                        <img class="portfolio-item__photo" src="./images/portfolio/case-1.jpg" alt="Banking App"
+                            width="360" />
+                        <h3 class="portfolio-item__title">Banking App</h3>
+                        <p class="portfolio-item__text">App</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-item__photo" src="./images/portfolio/case-2.jpg" alt="Cashless Payment"
+                            width="360" />
+                        <h3 class="portfolio-item__title">Cashless Payment</h3>
+                        <p class="portfolio-item__text">Marketing</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-item__photo" src="./images/portfolio/case-3.jpg" alt="Meditation App"
+                            width="360" />
+                        <h3 class="portfolio-item__title">Meditation App</h3>
+                        <p class="portfolio-item__text">App</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-item__photo" src="./images/portfolio/case-4.jpg" alt="Taxi Service"
+                            width="360" />
+                        <h3 class="portfolio-item__title">Taxi Service</h3>
+                        <p class="portfolio-item__text">Marketing</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-item__photo" src="./images/portfolio/case-5.jpg" alt="Screen Illustrations"
+                            width="360" />
+                        <h3 class="portfolio-item__title">Screen Illustrations</h3>
+                        <p class="portfolio-item__text">Design</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-item__photo" src="./images/portfolio/case-6.jpg" alt="Online Courses"
+                            width="360" />
+                        <h3 class="portfolio-item__title">Online Courses</h3>
+                        <p class="portfolio-item__text">Marketing</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 
     <footer class="footer">
-        <a href="./index.html" class="logo">Web <span class="accent-light">Studio</span></a>
-        <p class="footer__text">
-            Increase the flow of customers and sales for your business with digital
-            marketing & growth solutions.
-        </p>
+        <div class="container">
+            <a href="./index.html" class="logo">Web <span class="accent-light">Studio</span></a>
+            <p class="footer__text">
+                Increase the flow of customers and sales for your business with digital
+                marketing & growth solutions.
+            </p>
+        </div>
     </footer>
 </body>
 
