--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container flex jc-sb ai-c">
             <nav class="header__nav">
                 <a href="./index.html" class="logo">Web <span class="accent-dark">Studio</span></a>
 
@@ -98,7 +98,8 @@
                 <h2 class="team__title">Our Team</h2>
                 <ul class="team__list">
                     <li class="team-member">
-                        <img class="team-member__photo" src="./images/team/member-1.jpg" alt="Mark Guerrero" width="264" />
+                        <img class="team-member__photo" src="./images/team/member-1.jpg" alt="Mark Guerrero"
+                            width="264" />
                         <h3 class="team-member__name">Mark Guerrero</h3>
                         <p class="team-member__profession">Product Designer</p>
                     </li>
@@ -108,12 +109,14 @@
                         <p class="team-member__profession">Frontend Developer</p>
                     </li>
                     <li class="team-member">
-                        <img class="team-member__photo" src="./images/team/member-3.jpg" alt="Camila Garcia" width="264" />
+                        <img class="team-member__photo" src="./images/team/member-3.jpg" alt="Camila Garcia"
+                            width="264" />
                         <h3 class="team-member__name">Camila Garcia</h3>
                         <p class="team-member__profession">Marketing</p>
                     </li>
                     <li class="team-member">
-                        <img class="team-member__photo" src="./images/team/member-4.jpg" alt="Daniel Wilson" width="264" />
+                        <img class="team-member__photo" src="./images/team/member-4.jpg" alt="Daniel Wilson"
+                            width="264" />
                         <h3 class="team-member__name">Daniel Wilson</h3>
                         <p class="team-member__profession">UI Designer</p>
                     </li>
@@ -150,8 +153,8 @@
                         <p class="portfolio-item__text">Marketing</p>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-item__photo" src="./images/portfolio/case-5.jpg" alt="Screen Illustrations"
-                            width="360" />
+                        <img class="portfolio-item__photo" src="./images/portfolio/case-5.jpg"
+                            alt="Screen Illustrations" width="360" />
                         <h3 class="portfolio-item__title">Screen Illustrations</h3>
                         <p class="portfolio-item__text">Design</p>
                     </li>
