Add styling for intro section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <main>
         <section class="intro">
-            <div class="container">
+            <div class="container flex fd-col ai-c">
                 <h1 class="intro__title">Effective Solutions for Your Business</h1>
                 <button class="intro__button" type="button">Order Service</button>
             </div>
