Add styling to features section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <section class="features">
             <div class="container">
-                <h2 class="features__title">Features</h2>
+                <h2 class="features__title visually-hidden">Features</h2>
                 <ul class="features__list">
                     <li class="features-item">
                         <h3 class="features-item__title">Strategy</h3>
