Add styling for team section

--- a/index.html
+++ b/index.html
@@ -100,25 +100,33 @@
                     <li class="team-member">
                         <img class="team-member__photo" src="./images/team/member-1.jpg" alt="Mark Guerrero"
                             width="264" />
-                        <h3 class="team-member__name">Mark Guerrero</h3>
-                        <p class="team-member__profession">Product Designer</p>
+                        <div class="team-member__info">
+                            <h3 class="team-member__name">Mark Guerrero</h3>
+                            <p class="team-member__profession">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-member">
                         <img class="team-member__photo" src="./images/team/member-2.jpg" alt="Tom Ford" width="264" />
-                        <h3 class="team-member__name">Tom Ford</h3>
-                        <p class="team-member__profession">Frontend Developer</p>
+                        <div class="team-member__info">
+                            <h3 class="team-member__name">Tom Ford</h3>
+                            <p class="team-member__profession">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-member">
                         <img class="team-member__photo" src="./images/team/member-3.jpg" alt="Camila Garcia"
                             width="264" />
-                        <h3 class="team-member__name">Camila Garcia</h3>
-                        <p class="team-member__profession">Marketing</p>
+                        <div class="team-member__info">
+                            <h3 class="team-member__name">Camila Garcia</h3>
+                            <p class="team-member__profession">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-member">
                         <img class="team-member__photo" src="./images/team/member-4.jpg" alt="Daniel Wilson"
                             width="264" />
-                        <h3 class="team-member__name">Daniel Wilson</h3>
-                        <p class="team-member__profession">UI Designer</p>
+                        <div class="team-member__info">
+                            <h3 class="team-member__name">Daniel Wilson</h3>
+                            <p class="team-member__profession">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
