--- a/index.html
+++ b/index.html
@@ -139,38 +139,50 @@
                     <li class="portfolio-item">
                         <img class="portfolio-item__photo" src="./images/portfolio/case-1.jpg" alt="Banking App"
                             width="360" />
-                        <h3 class="portfolio-item__title">Banking App</h3>
-                        <p class="portfolio-item__text">App</p>
+                        <div class="portfolio-item__info">
+                            <h3 class="portfolio-item__title">Banking App</h3>
+                            <p class="portfolio-item__text">App</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img class="portfolio-item__photo" src="./images/portfolio/case-2.jpg" alt="Cashless Payment"
                             width="360" />
-                        <h3 class="portfolio-item__title">Cashless Payment</h3>
-                        <p class="portfolio-item__text">Marketing</p>
+                        <div class="portfolio-item__info">
+                            <h3 class="portfolio-item__title">Cashless Payment</h3>
+                            <p class="portfolio-item__text">Marketing</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img class="portfolio-item__photo" src="./images/portfolio/case-3.jpg" alt="Meditation App"
                             width="360" />
-                        <h3 class="portfolio-item__title">Meditation App</h3>
-                        <p class="portfolio-item__text">App</p>
+                        <div class="portfolio-item__info">
+                            <h3 class="portfolio-item__title">Meditation App</h3>
+                            <p class="portfolio-item__text">App</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img class="portfolio-item__photo" src="./images/portfolio/case-4.jpg" alt="Taxi Service"
                             width="360" />
-                        <h3 class="portfolio-item__title">Taxi Service</h3>
-                        <p class="portfolio-item__text">Marketing</p>
+                        <div class="portfolio-item__info">
+                            <h3 class="portfolio-item__title">Taxi Service</h3>
+                            <p class="portfolio-item__text">Marketing</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img class="portfolio-item__photo" src="./images/portfolio/case-5.jpg"
                             alt="Screen Illustrations" width="360" />
-                        <h3 class="portfolio-item__title">Screen Illustrations</h3>
-                        <p class="portfolio-item__text">Design</p>
+                        <div class="portfolio-item__info">
+                            <h3 class="portfolio-item__title">Screen Illustrations</h3>
+                            <p class="portfolio-item__text">Design</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img class="portfolio-item__photo" src="./images/portfolio/case-6.jpg" alt="Online Courses"
                             width="360" />
-                        <h3 class="portfolio-item__title">Online Courses</h3>
-                        <p class="portfolio-item__text">Marketing</p>
+                        <div class="portfolio-item__info">
+                            <h3 class="portfolio-item__title">Online Courses</h3>
+                            <p class="portfolio-item__text">Marketing</p>
+                        </div>
                     </li>
                 </ul>
             </div>
