--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
     <footer class="footer">
         <div class="container">
-            <a href="./index.html" class="logo">Web <span class="accent-light">Studio</span></a>
+            <a href="./index.html" class="logo footer__logo">Web <span class="accent-light">Studio</span></a>
             <p class="footer__text">
                 Increase the flow of customers and sales for your business with digital
                 marketing & growth solutions.
